--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
     "extends": ["eslint:recommended", "prettier"],
 
-    "plugins": ["prettier"],
+    "plugins": ["prettier", "jest"],
 
     "parserOptions": {
         "ecmaVersion": 2018
@@ -10,7 +10,8 @@
     "env": {
         "browser": true,
         "node": true,
-        "es6": true
+        "es6": true,
+        "jest/globals": true
     },
 
     "globals": {
