--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chai": "^4.1.2",
     "eslint": "^5.14.1",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-prettier": "^2.4.0",
     "generate-changelog": "^1.6.0",
     "jest": "^21.2.1",
