--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@madeiramadeira/http-client",
   "version": "1.0.2",
   "description": "Simple HTTP client lib",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src",
     "start:watch": "nodemon src",
